--- a/Front-end/app/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/Front-end/app/App_Resources/Android/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
-		android:label="@string/app_name"
-		android:theme="@style/AppTheme">
+		android:label="@string/app_name">
 
 		<activity
 			android:name="com.tns.NativeScriptActivity"
