--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -26,46 +26,42 @@
     "base64-arraybuffer": "^0.2.0",
     "http": "0.0.0",
     "nativescript-app-settings": "^1.0.0",
-    "nativescript-dev-appium": "^6.1.3",
     "nativescript-drop-down": "^5.0.4",
     "nativescript-exit": "^1.0.1",
+    "nativescript-fingerprint-auth": "^7.0.2",
     "nativescript-fonticon": "^2.0.0",
     "nativescript-geolocation": "^5.1.0",
-    "nativescript-socketio": "^3.2.1",
-    "nativescript-toast": "^2.0.0",
-    "nativescript-toasty": "^1.3.0",
     "nativescript-vue": "^2.4.0",
-    "tns-core-modules": "^6.0.0",
+    "tns-core-modules": "^6.3.2",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "nativescript-dev-appium": "^6.1.3",
-    "appium": "^1.16.0",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.7.6",
+    "@types/chai": "~4.1.7",
+    "@types/mocha": "~5.2.5",
+    "@types/node": "~10.12.18",
     "@vue/test-utils": "^1.0.0-beta.30",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.2",
+    "chai": "~4.1.2",
+    "husky": "^2.2.0",
     "jest": "^24.9.0",
+    "mocha": "~5.2.0",
+    "mocha-junit-reporter": "~1.18.0",
+    "mocha-multi": "~1.0.1",
+    "mochawesome": "^4.1.0",
+    "nativescript-dev-appium": "^6.1.3",
     "nativescript-dev-webpack": "^1.0.0",
     "nativescript-vue-template-compiler": "^2.0.0",
     "nativescript-worker-loader": "~0.9.0",
     "node-sass": "^4.9.2",
     "sonar-scanner": "^3.1.0",
     "vue": "^2.6.10",
-    "husky": "^2.2.0",
     "vue-jest": "^3.0.5",
     "vue-loader": "^15.4.0",
-    "vue-template-compiler": "^2.6.10",
-    "mocha": "~5.2.0",
-    "mochawesome": "~3.1.2",
-    "chai": "~4.1.2",
-    "@types/mocha": "~5.2.5",
-    "@types/chai": "~4.1.7",
-    "@types/node": "~10.12.18",
-    "mocha-junit-reporter": "~1.18.0",
-    "mocha-multi": "~1.0.1"
+    "vue-template-compiler": "^2.6.10"
   },
   "husky": {
     "hooks": {
